# RecipeBox

./: pyproject.toml
recipebox/: settings.py  urls.py
recipes/: forms.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe_favorite.py
recipes/templates/: addauthor.html  addrecipe.html  editrecipe.html  error.html  index.html  login.html  profile.html  profile2.html  recipe.html  recipe2.html
