[tool.poetry]
name = "recipebox"
version = "0.1.0"
description = ""
authors = ["Christian Rojas <cjrojas72@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.0"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
